--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "knex": "^0.14.4",
     "moment": "^2.21.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
+    "pinyin": "^2.8.3",
     "serve-favicon": "~2.4.5",
     "uuid": "^3.2.1"
   }
