--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "baidu-aip-sdk": "^2.1.0",
     "body-parser": "~1.18.2",
+    "config": "^1.30.0",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -15,8 +17,10 @@
     "knex": "^0.14.4",
     "moment": "^2.21.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
+    "pinyin": "^2.8.3",
     "serve-favicon": "~2.4.5",
     "uuid": "^3.2.1"
   }
