--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "baidu-aip-sdk": "^2.1.0",
     "body-parser": "~1.18.2",
+    "byline": "^5.0.0",
     "config": "^1.30.0",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "~1.4.3",
@@ -20,6 +21,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
+    "n-readlines": "^0.2.8",
     "pinyin": "^2.8.3",
     "serve-favicon": "~2.4.5",
     "uuid": "^3.2.1"
