--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^1.5.2",
     "n-readlines": "^0.2.8",
     "pinyin": "^2.8.3",
+    "rotating-file-stream": "^1.3.6",
     "serve-favicon": "~2.4.5",
     "uuid": "^3.2.1"
   }
